--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,9 +3,9 @@ owner: lqvp # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
+  - name: misskey
     url: https://mi.0il.pw
-  - name: Wikipedia
+  - name: misskey-zzlq
     url: https://zzlq.0il.pw
 
 status-website:
