--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,11 +4,13 @@ repo: upptime # The name of this repository
 
 sites:
   - name: misskey
-    url: https://mi.0il.pw
+    url: https://mi.0il.pw/
   - name: misskey-zzlq
-    url: https://zzlq.0il.pw
+    url: https://zzlq.0il.pw/
   - name: misskey-key
-    url: https://key.0il.pw
+    url: https://key.0il.pw/
+  - name: mastodon
+    url: https://mstdn.0il.pw/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
