--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,8 @@ sites:
     url: https://key.0il.pw/
   - name: yoiyami
     url: https://yoiyami.0il.pw/
+  - name: sharkey
+    url: https://sharkey.0il.pw/
   - name: mastodon
     url: https://mstdn.0il.pw/
 
