--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,6 +15,10 @@ sites:
     url: https://sharkey.0il.pw/
   - name: mastodon
     url: https://mstdn.0il.pw/
+  - name: relay
+    url: $RELAY
+    expectedStatusCodes:
+      - 405
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
