--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime # The name of this repository
 
 sites:
   - name: misskey
-    url: https://mi.0il.pw/
+    url: https://misskey.vip/
   - name: misskey-key
     url: https://key.0il.pw/
   - name: tools
